<resources>
    <string name="app_name">rfid_raw_material</string>
    <string name="tab_tittle_inventory">Inventory</string>
    <string name="tab_tittle_read">Items Read</string>
    <string name="tittle_app_menu">RFID Raw Materials</string>
    <string name="checkpoint_tittle">Checkpoint Systems</string>
    <string name="item_menu_inventory">Inventory</string>
    <string name="item_menu_write">Write Tag</string>
    <string name="item_menu_provider">Providers</string>
    <string name="inventory_list">Inventory List</string>
    <string name="provider_detail">Provider Detail</string>
    <string name="id">ID</string>
    <string name="id_as400">ID AS400</string>
    <string name="provider">Provider</string>
    <string name="contact">Contact</string>
    <string name="country">Country</string>
    <string name="save">Save</string>
    <string name="choose_option">Choose Option</string>
    <string name="provider_list">Provider List</string>
    <string name="read_inventory">Read Inventory</string>
    <string name="items_scanned">Total Items Scanned</string>
    <string name="items_write">Total Items Writed</string>
    <string name="identifier_item">Identifier Item</string>
    <string name="version">Version</string>
    <string name="type">Type</string>
    <string name="subversion">Subversion</string>
    <string name="write">Write</string>
    <string name="loading_text_bluetooth">Looking for device </string>
    <string name="bt_message_device_discovery">Looking for devices in area</string>
    <string name="loading_text">Loading...</string>
    <string name="power_config_settings">max_power</string>
    <string name="set_power">Set Power Configuration</string>
    <string name="label_max_power_config">Set power transmission</string>

    <string name="select_session">Select session</string>
    <string name="title_dialog_bluetooth">Looks like your bluetooth is off!</string>
    <string name="subtitle_dialog_rfid">We couldn´t connect to yout RFID Hand-Held Reader. Would you like help connecting it...</string>
    <string name="radio_option_yes">1.- Turn ON your bluetooth connection</string>
    <string name="radio_option_no">2.- Pair your handheld device</string>
    <string name="finish_inventory">Finish</string>
    <string name="new_provider">New Provider</string>
    <string name="check_fields">Validate all fields</string>
    <string name="tags_list">Tags List</string>
    <string name="finish_inventory_title">Do you want finish inventory?</string>
    <string name="finish_inventory_question">The progress will lost, and not will be save log</string>
    <string name="pause_inventory_title">Pause Inventory</string>
    <string name="pause_inventory_question">Do you want pause inventory?</string>
    <string name="start_inventory_title">Start Inventory</string>
    <string name="start_inventory_question">Do you want start inventory?</string>
    <string name="yes">Accept</string>
    <string name="cancel">Cancel</string>
    <string name="configuration">Configuration</string>
    <string name="language">Language</string>
    <string name="reload_device">Reconnect handheld</string>
    <string name="finish_write">Finish Write</string>
    <string name="write_question">Do you want finish writing?</string>
    <string name="progress_write">the progress will lost, and not will be save log</string>
    <string name="error_log">No data exists to save</string>
    <string name="press_back_again">Press again back button to exit</string>
    <string name="validate_license_text">Validate license</string>
    <string name="dialog_error_multiple_tags"> More than one tag detected, please clean your and press trigger again</string>
    <string name="dialog_error_writing_tags"> Error while writing tag</string>

    <string name="accept_permissions">You need to accept all permissions</string>
    <string name="blank_field">Blank Field</string>
    <string name="validate_license">Validate licence</string>
    <string name="invalidate_token">Invalidate Token</string>
    <string name="token_error">Check that token is valid and has not expired</string>
    <string name="validate">Validate</string>
    <string name="license_send_code">Send the code below to: support@checkpt.com in order to get a valid license</string>
    <string name="paste_license">Paste your license here</string>
    <string name="id_copied">Id copied to clipboard</string>
    <string name="remove_provider">Remove Provider</string>
    <string name="remove_provider_question">Do you want remove provider?</string>
    <string name="epc_data">EPC Data</string>
    <string name="looking_device">Looking for device</string>
    <string name="device_unavailable">Device unavailable</string>
    <string name="empty_fields">No empty fields allowed</string>
    <string name="connecting">Connecting...</string>
    <string name="error">Error</string>
    <string name="warning">Warning</string>
    <string name="invalid_tag">Invalid Tag</string>
    <string name="invalid_tag_message">The tag you want writing is not 128 bits</string>
    <string name="continue_message">Continue</string>
    <string name="volume">Hand Held Volume</string>
    <string name="volume_text_on">ON</string>
    <string name="volume_text_off">OFF</string>

</resources>
