<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:gravity="center_vertical|center_horizontal">

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_gravity="center_horizontal|center_vertical"
        android:background="@color/navy"
        android:gravity="center_vertical|center_horizontal"
        android:orientation="vertical">


        <TextView
            android:id="@+id/tvTitleDialogLicense"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:text="@string/loading_text_bluetooth"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:gravity="center_vertical|center_horizontal"/>

        <TextView
            android:id="@+id/tvWarningDialogLicense"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:text="@string/title_dialog_bluetooth"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textAlignment="center"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3.5"
            android:gravity="center_vertical|center_horizontal"
            android:orientation="horizontal">
            <TextView
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:background="@drawable/ic_warning"
                android:backgroundTint="@color/white"></TextView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2.5"
            android:paddingLeft="40dp"
            android:paddingRight="40dp"
            android:orientation="horizontal">
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnDialogAcceptLicence"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="5"
                android:layout_gravity="center_vertical"
                android:background="@drawable/button_next_dialog"
                android:text="@string/yes"
                android:textColor="@color/white"
                android:gravity="center_vertical|center_horizontal"></androidx.appcompat.widget.AppCompatButton>

        </LinearLayout>
    </LinearLayout>

</LinearLayout>