<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/transparent"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/lytLoaderView"
            android:layout_width="300dp"
            android:layout_height="280dp"
            android:background="@drawable/bg_custom_dialog"
            android:orientation="vertical"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_gravity="center_vertical"
                android:gravity="right"
                android:paddingRight="10dp">

                <androidx.appcompat.widget.AppCompatButton
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_gravity="center_vertical"
                    android:background="@drawable/button_close_dialog"
                    android:gravity="center_vertical"
                    android:textSize="10dp"></androidx.appcompat.widget.AppCompatButton>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="5dp"
                android:background="@color/gray"></LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="20dp"
                android:weightSum="1"
                android:layout_gravity="center">
                <ProgressBar
                    android:id="@+id/progressLoader"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"/>

                <TextView
                    android:id="@+id/tvMessageLoader"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:text="Found device"
                    android:textAlignment="center"
                    android:textColor="@color/navy"
                    android:textSize="25dp"></TextView>



                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="bottom"
                    android:layout_marginBottom="0dp">

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/btnSetTag"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_gravity="bottom"
                        android:background="@drawable/button_next_dialog"
                        android:text="@string/save"
                        android:textColor="@color/white"
                        android:visibility="gone"></androidx.appcompat.widget.AppCompatButton>
                </LinearLayout>


            </LinearLayout>


        </LinearLayout>
        <LinearLayout
            android:id="@+id/lytblueToothAdvice"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:weightSum="1"
            android:orientation="vertical"
            android:padding="20dp"
            android:gravity="center"
            android:visibility="gone">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/navy"
                android:text="@string/title_dialog_bluetooth"
                android:textAlignment="center"
                android:textSize="25dp"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp">
            </TextView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text="@string/subtitle_dialog_rfid"
                android:textAlignment="center"
                android:textSize="15dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp">
            </TextView>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:text="@string/radio_option_yes"
                android:textColor="@color/black"
                android:outlineAmbientShadowColor="@color/red"
                android:buttonTint="@color/navy"
                android:textSize="15dp"
                android:layout_marginStart="25dp"
                android:layout_marginEnd="25dp">
            </TextView>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:text="@string/radio_option_no"
                android:textColor="@color/black"
                android:outlineAmbientShadowColor="@color/red"
                android:buttonTint="@color/navy"
                android:textSize="15dp"
                android:layout_marginTop="10dp"
                android:layout_marginStart="25dp"
                android:layout_marginEnd="25dp">
            </TextView>

        </LinearLayout>

    </LinearLayout>
</LinearLayout>