<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:gravity="center_vertical|center_horizontal">


    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_gravity="center_horizontal|center_vertical"
        android:background="@color/navy"
        android:gravity="center_vertical|center_horizontal"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.5"
            android:layout_gravity="center_vertical|center_horizontal"
            android:gravity="right">

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/btnCloseDialogWrite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:src="@drawable/ic_cancel"
                app:backgroundTint="@color/navy"
                app:fabCustomSize="30dp"
                app:maxImageSize="35dp"
                app:tint="@color/white"
                android:layout_gravity="center_horizontal|center_vertical"></com.google.android.material.floatingactionbutton.FloatingActionButton>

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:text="@string/write_question"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textAlignment="center"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"/>

        <TextView
            android:id="@+id/tvQuestionDialog"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:text="@string/progress_write"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:textAlignment="center"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2.5"
            android:gravity="center_vertical|center_horizontal"
            android:orientation="horizontal">
            <TextView
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:background="@drawable/ic_scan"
                android:backgroundTint="@color/white"></TextView>

            <TextView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:background="@drawable/ic_question"
                android:backgroundTint="@color/white"
                android:layout_marginLeft="10dp"></TextView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:paddingLeft="40dp"
            android:paddingRight="40dp"
            android:orientation="horizontal">
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnDialogNextWrite"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="5"
                android:layout_gravity="center_vertical"
                android:background="@drawable/button_next_dialog"
                android:text="@string/yes"
                android:textColor="@color/white"
                android:layout_marginRight="20dp"
                android:gravity="center_vertical|center_horizontal"></androidx.appcompat.widget.AppCompatButton>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnDialogCancelWrite"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="5"
                android:layout_gravity="center_vertical"
                android:background="@drawable/button_next_dialog"
                android:text="@string/cancel"
                android:textColor="@color/white"
                android:gravity="center_vertical|center_horizontal"></androidx.appcompat.widget.AppCompatButton>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>