<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal|center_vertical">

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_gravity="center_horizontal|center_vertical"
        android:background="@color/navy"
        android:gravity="center_vertical|center_horizontal"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.5"
            android:layout_gravity="center_vertical|center_horizontal"
            android:gravity="right">

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/btnCloseDialogInvalid"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:src="@drawable/ic_cancel"
                app:backgroundTint="@color/navy"
                app:fabCustomSize="30dp"
                app:maxImageSize="35dp"
                app:tint="@color/white"
                android:layout_gravity="center_horizontal|center_vertical"></com.google.android.material.floatingactionbutton.FloatingActionButton>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:background="@color/navy_800"></LinearLayout>

        <TextView
            android:id="@+id/tvTitleDialog"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:text="@string/invalid_tag"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:gravity="center_vertical|center_horizontal"/>

        <TextView
            android:id="@+id/tvQuestionDialog"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:text="@string/invalid_tag_message"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:gravity="center_horizontal|center_vertical"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:gravity="center_vertical|center_horizontal"
            android:orientation="horizontal">
            <TextView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:background="@drawable/ic_tag"
                android:backgroundTint="@color/white"></TextView>

            <TextView
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:background="@drawable/ic_cancel"
                android:backgroundTint="@color/white"></TextView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2.5"
            android:paddingLeft="40dp"
            android:paddingRight="40dp"
            android:orientation="horizontal">
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnDialogContinue"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="5"
                android:layout_gravity="center_vertical"
                android:background="@drawable/button_next_dialog"
                android:text="@string/continue_message"
                android:textColor="@color/white"
                android:layout_marginRight="20dp"
                android:gravity="center_vertical|center_horizontal"></androidx.appcompat.widget.AppCompatButton>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnDialogCancelInvalid"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="5"
                android:layout_gravity="center_vertical"
                android:background="@drawable/button_next_dialog"
                android:text="@string/cancel"
                android:textColor="@color/white"
                android:gravity="center_vertical|center_horizontal"></androidx.appcompat.widget.AppCompatButton>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>